WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292582
REGRESSION (
294079@main
): [ MacOS iOS WK2 ] 3X imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form are consistent failures
https://bugs.webkit.org/show_bug.cgi?id=292582
Summary
REGRESSION (294079@main): [ MacOS iOS WK2 ] 3X imported/w3c/web-platform-tes...
Jay Stfleur
Reported
2025-05-05 20:41:28 PDT
Description: imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form-userInitiated.html imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form-with-target.html imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form.html All 3 test are consistently failing and regressed after commit
294079@main
Buildbot URL:
https://build.webkit.org/#/builders/1226/builds/1353
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigate-form-userInitiated.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigate-form-with-target.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigate-event%2Fnavigate-form.html
Diff/Image Diff/Crash Log: FAIL <form> submission with a target fires navigate event in target window but not source assert_true: expected true got false
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-05 20:41:58 PDT
<
rdar://problem/150733740
>
EWS
Comment 2
2025-05-05 20:52:13 PDT
Test gardening commit
294543@main
(c0a825c08d0a): <
https://commits.webkit.org/294543@main
> Reviewed commits have been landed. Closing PR #44978 and removing active labels.
Alexey Proskuryakov
Comment 3
2025-05-06 09:14:17 PDT
***
Bug 292581
has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 4
2025-05-06 12:20:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45019
Brent Fulgham
Comment 5
2025-05-06 12:56:23 PDT
It's frustrating that these three test failures did not show up in EWS for PR-44275. Do we not run these WPT tests in EWS? Hmm. It doesn't appear that `navigation-api/navigate-event/` shows up in the WK2 EWS runs, so I guess not? That's unfortunate.
EWS
Comment 6
2025-05-06 16:15:37 PDT
Committed
294582@main
(17fce107c783): <
https://commits.webkit.org/294582@main
> Reviewed commits have been landed. Closing PR #45019 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug