REGRESSION (294079@main): [  MacOS iOS WK2 ] 3X imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form are consistent failures https://bugs.webkit.org/show_bug.cgi?id=292582 rdar://150733740

Reviewed by Ryosuke Niwa.

I introduced a user-after-move in 294079@main (in FrameLoader::loadPostRequest). This patch corrects that mistake.

Tested by:
imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form-userInitiated.html
imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form-with-target.html
imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-form.html

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadPostRequest): Revert back to using a const reference for url, since it is sometimes
used again in a later bit of code. Moving the object causes it to be blank later, which is incorrect.

Canonical link: https://commits.webkit.org/294582@main